--- a/index.html
+++ b/index.html
@@ -95,13 +95,14 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<h3>Publication: vector database management systems</h3>
-											<p>A new publication in Cognitive Systems Research introduces the concepts and opportunities of novel vector database management systems.</p>
+											<p>A new publication in <i>Cognitive Systems Research</i> introduces the concepts and opportunities of novel vector database management systems.</p>
 											<ul class="actions">
 												<li><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="button">Read more</a></li>
 											</ul>
 										</article>
+
 									</div>
 								</section>
 
