--- a/index.html
+++ b/index.html
@@ -102,7 +102,14 @@
 												<li><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="button">Read more</a></li>
 											</ul>
 										</article>
-
+										<article>
+											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<h3>Working group: data systems education</h3>
+											<p>DBS Research participates in a working group on data systems education curriculum development at the <i>ITiCSE'24</i>conference.</p>
+											<!--<ul class="actions">
+												<li><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="button">Read more</a></li>
+											</ul> -->
+										</article>
 									</div>
 								</section>
 
