--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 										<article>
 											<span class="icon solid fa-rocket"></span>
 											<div class="content">
-												<h3></h3>
+												<h3>Research-as-a-Service</h3>
 												<p></p>
 											</div>
 										</article>
@@ -95,17 +95,25 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<h3>Publication: vector databases in cyber security</h3>
+											<p>A new publication in <i>ECCWS'24</i> disseminates use-cases of vector databases in various cyber security domains.</p>
+											<!--<ul class="actions">
+												<li><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="button">Read more</a></li>
+											</ul> -->
+										</article>
+										<article>
 											<a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<h3>Publication: vector database management systems</h3>
 											<p>A new publication in <i>Cognitive Systems Research</i> introduces the concepts and opportunities of novel vector database management systems.</p>
-											<ul class="actions">
+											<!--<ul class="actions">
 												<li><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="button">Read more</a></li>
-											</ul>
+											</ul> -->
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<h3>Working group: data systems education</h3>
-											<p>DBS Research participates in a working group on data systems education curriculum development at the <i>ITiCSE'24</i>conference.</p>
+											<p>DBS Research participates in a working group on data systems education curriculum development at the <i>ITiCSE'24</i> conference.</p>
 											<!--<ul class="actions">
 												<li><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="button">Read more</a></li>
 											</ul> -->
@@ -207,7 +215,7 @@
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">Design: <a href="https://html5up.net">HTML5 UP</a>. Images: SD & Bing Image Creator.</p>
 								</footer>
 
 						</div>
