--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
 												<h3>Efficiency through smart design</h3>
-												<p></p>
+												<p>From data-intensive transaction processing to data management solutions for AI, we design scalable, energy efficient, and smart data systems solutions.</p>
 											</div>
 										</article>
 										<article>
@@ -95,7 +95,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a target="_blank" href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<h3>Publication: vector databases in cyber security</h3>
 											<p>A new publication in <i>ECCWS'24</i> disseminates use-cases of vector databases in various cyber security domains.</p>
 											<!--<ul class="actions">
