--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a target="_blank" href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a target="_blank" href="https://papers.academic-conferences.org/index.php/eccws/article/view/2220" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<h3>Publication: vector databases in cyber security</h3>
 											<p>A new publication in <i>ECCWS'24</i> disseminates use-cases of vector databases in various cyber security domains.</p>
 											<!--<ul class="actions">
@@ -113,7 +113,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<h3>Working group: data systems education</h3>
-											<p>DBS Research participates in a working group on data systems education curriculum development at the <i>ITiCSE'24</i> conference.</p>
+											<p>DBS Research leads a working group on data systems education curriculum development at the <i>ITiCSE'24</i> conference.</p>
 											<!--<ul class="actions">
 												<li><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="button">Read more</a></li>
 											</ul> -->
