--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3649217.3653552" class="image"><img src="images/pic04.jpg" alt="" /></a>
+											<h3>Publication: SQL error messages</h3>
+											<p>A new publication in <i>ITiCSE'24</i> explores which elements in SQL error messages help fix syntax errors.</p>
+											<!--<ul class="actions">
+												<li><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="button">Read more</a></li>
+											</ul> -->
+										</article>
+										<article>
 											<a target="_blank" href="https://papers.academic-conferences.org/index.php/eccws/article/view/2220" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<h3>Publication: vector databases in cyber security</h3>
 											<p>A new publication in <i>ECCWS'24</i> disseminates use-cases of vector databases in various cyber security domains.</p>
@@ -111,7 +119,7 @@
 											</ul> -->
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3649405.3659529" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<h3>Working group: data systems education</h3>
 											<p>DBS Research leads a working group on data systems education curriculum development at the <i>ITiCSE'24</i> conference.</p>
 											<!--<ul class="actions">
