--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
 												<h3>Efficiency through smart design</h3>
-												<p>From data-intensive transaction processing to data management solutions for AI, we design scalable, energy efficient, and smart data systems solutions.</p>
+												<p>From data-intensive transaction processing to data management solutions for AI, we design scalable, green, energy efficient, and smart data systems solutions.</p>
 											</div>
 										</article>
 										<article>
 											<span class="icon solid fa-paper-plane"></span>
 											<div class="content">
 												<h3>Training and propagation</h3>
-												<p></p>
+												<p>We provide on-demand training in data systems topics such as DBMSs, querying, optimization, and integration.</p>
 											</div>
 										</article>
 									</div>
