--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 									<div class="content">
 										<header>
 											<h1>Database Systems Research</h1>
-											<p>subtitle</p>
+											<p></p>
 										</header>
-										<p>Research group description</p>
+										<p>We are a multi-disciplinary research group based at Tampere University, Finland. We conduct high quality data systems research on topics such as energy efficient data management, incorporating AI into data pipelines, DBMS compilers, vector DBMSs, query languages, and data systems education.</p>
 										<!--<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul> -->
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/logo.png" alt="" />
 									</span>
 								</section>
 
@@ -58,20 +58,6 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon fa-gem"></span>
-											<div class="content">
-												<h3>Innovation in novel contexts</h3>
-												<p></p>
-											</div>
-										</article>
-										<article>
-											<span class="icon solid fa-rocket"></span>
-											<div class="content">
-												<h3>Research-as-a-Service</h3>
-												<p></p>
-											</div>
-										</article>
-										<article>
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
 												<h3>Efficiency through smart design</h3>
@@ -79,10 +65,24 @@
 											</div>
 										</article>
 										<article>
+											<span class="icon fa-gem"></span>
+											<div class="content">
+												<h3>Innovation in novel contexts</h3>
+												<p>We constantly apply novel data system inventions into old and new business domains and use-cases.</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-rocket"></span>
+											<div class="content">
+												<h3>Research-as-a-Service</h3>
+												<p>We conduct scientifically rigorous user studies, lab tests, performance testing, and literature syntheses on demand.</p>
+											</div>
+										</article>
+										<article>
 											<span class="icon solid fa-paper-plane"></span>
 											<div class="content">
 												<h3>Training and propagation</h3>
-												<p>We provide on-demand training in data systems topics such as DBMSs, querying, optimization, and integration.</p>
+												<p>We provide on-demand training in data systems topics such as DBMSs, querying, optimization, and reliability, as well as accessible propagation of recent advances in data systems.</p>
 											</div>
 										</article>
 									</div>
@@ -94,6 +94,14 @@
 										<h2>Recent highlights</h2>
 									</header>
 									<div class="posts">
+										<article>
+											<a href="" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<h3>People: new researcher</h3>
+											<p>Senior researcher Dr. Marko Junkkari joins the DBS research group!</p>
+											<!--<ul class="actions">
+												<li><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="button">Read more</a></li>
+											</ul> -->
+										</article>
 										<article>
 											<a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3649217.3653552" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3>Publication: SQL error messages</h3>
