--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 										<article>
 											<a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3649405.3659529" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<h3>Working group: data systems education</h3>
-											<p>DBS Research leads a working group on data systems education curriculum development at the <i>ITiCSE'24</i> conference.</p>
+											<p>DBS research leads a working group on data systems education curriculum development at the <i>ITiCSE'24</i> conference.</p>
 											<!--<ul class="actions">
 												<li><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="button">Read more</a></li>
 											</ul> -->
