people, projects, publications

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 											<h1>Database Systems Research</h1>
 											<p></p>
 										</header>
-										<p>We are a multi-disciplinary research group based at Tampere University, Finland. We conduct high quality data systems research on topics such as energy efficient data management, incorporating AI into data pipelines, DBMS compilers, vector DBMSs, query languages, and data systems education.</p>
+										<p>We are a multi-disciplinary research group based at Tampere University, Finland. We conduct high quality data systems research on topics such as energy efficient data management, incorporating AI into data pipelines, vector databases, multi-modal data, query languages, DBMS compilers, and data systems education.</p>
 										<!--<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul> -->
@@ -95,6 +95,11 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3703922.3703932" class="image"><img src="images/pic06.jpg" alt="" /></a>
+											<h3>Publication: workshop report</h3>
+											<p>A new publication summarizes the data systems education studies presented at <i>SIGMOD DataEd'23</i> workshop in Seattle.</p>
+										</article>
+										<article>
 											<a href="" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3>People: new researcher</h3>
 											<p>Senior researcher Dr. Marko Junkkari joins the DBS research group!</p>
@@ -130,9 +135,6 @@
 											<a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3649405.3659529" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<h3>Working group: data systems education</h3>
 											<p>DBS research leads a working group on data systems education curriculum development at the <i>ITiCSE'24</i> conference.</p>
-											<!--<ul class="actions">
-												<li><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="button">Read more</a></li>
-											</ul> -->
 										</article>
 									</div>
 								</section>
@@ -159,9 +161,9 @@
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="#">Projects</a></li>
-										<li><a href="#">People</a></li>
-										<li><a href="#">Publications</a></li>
+										<li><a href="projects.html">Projects</a></li>
+										<li><a href="people.html">People</a></li>
+										<li><a href="publications.html">Publications</a></li>
 										<li>
 											<!--
 											<span class="opener">Submenu</span>
