--- a/projects.html
+++ b/projects.html
@@ -56,13 +56,35 @@ https://fontawesome.com/v5/search?o=r&s=solid
 										<h1>Current projects</h1>
 									</header>
 									<div class="features">
-										<article>
+										<!--<article>
 											<span class="icon solid fa-university"></span>
 											<div class="content">
-												<!-- <h3>TROXARTES</h3>
-												<p>The project examines the state of data systems education in Finland. Funded by City of Tampere.</p> -->
+												<h3>TROXARTES</h3>
+												<p>The project examines the state of data systems education in Finland. Funded by City of Tampere.</p>
 											</div>
-										</article>
+										</article> -->
+									<!-- <article>
+											<span class="icon solid fa-car"></span>
+											<div class="content">
+												<h3></h3>
+												<p>The project facilitates efficient data management in the context of . Funded by .</p>
+											</div>
+										</article> -->
+									</div>
+								</section>
+
+								<section>
+									<header class="major">
+										<h1>Past projects</h1>
+									</header>
+									<div class="features">
+										<article>
+												<span class="icon solid fas fa-hands-helping"></span>
+												<div class="content">
+													<h3>pg4n</h3>
+													<p>The project implemented a query writing tutor and integrated it into PostgreSQL.</p>
+												</div>
+											</article>
 									</div>
 								</section>
 
