--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 											<h1>Database Systems Research</h1>
 											<p></p>
 										</header>
-										<p>We are a multi-disciplinary research group based at Tampere University, Finland. We conduct high quality data systems research on topics such as energy efficient data management, incorporating AI into data pipelines, vector databases, multi-modal data, query languages, DBMS compilers, and data systems education.</p>
+										<p>Our multi-disciplinary research group is headquartered at <a target="_blank" href="https://www.tuni.fi/en/about-us/tampere-university">Tampere University</a>, Finland, where we conduct high-quality research in data systems. Our work focuses on topics including energy-efficient data management, integrating AI into data pipelines, vector databases, multi-modal data, query languages, DBMS compilers, and data systems education.</p>
 										<!--<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul> -->
@@ -100,7 +100,7 @@
 											<p>A new publication summarizes the data systems education studies presented at <i>SIGMOD DataEd'23</i> workshop in Seattle.</p>
 										</article>
 										<article>
-											<a href="" class="image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="people.html" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3>People: new researcher</h3>
 											<p>Senior researcher Dr. Marko Junkkari joins the DBS research group!</p>
 											<!--<ul class="actions">
