--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Database Systems Research</h1>
-											<p></p>
+											<h1>Database Systems</h1>
+											<p>Research group</p>
 										</header>
-										<p>Our multi-disciplinary research group is headquartered at <a target="_blank" href="https://www.tuni.fi/en/about-us/tampere-university">Tampere University</a>, Finland, where we conduct high-quality research in data systems. Our work focuses on topics including energy-efficient data management, integrating AI into data pipelines, vector databases, multi-modal data, query languages, DBMS compilers, and data systems education.</p>
+										<p>Our multi-disciplinary research group is headquartered at <a target="_blank" href="https://www.tuni.fi/en/about-us/tampere-university">Tampere University</a>, Finland, where we conduct high-quality research in database systems. Our work focuses on topics including energy-efficient and sustainable data management, integrating AI into data pipelines, vector databases, multi-modal data, query languages, DBMS compilers, and data systems education.</p>
 										<!--<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul> -->
