--- a/publications.html
+++ b/publications.html
@@ -28,6 +28,7 @@ https://fontawesome.com/v5/search?o=r&s=solid
 										<h1>Latest publications</h1>
 									</header>
 									<p>You can listen to podcast-like discussions on selected papers (courtesy of Google NotebookLM).</p>
+									<h2>2024</h2>
 									<div class="table-wrapper">
 										<table>
 											<thead>
@@ -68,6 +69,66 @@ https://fontawesome.com/v5/search?o=r&s=solid
 															<source src="audio/2024_vector.mp3" type="audio/mp3">Your browser does not support the audio element.
 															</audio>
 													</td>
+												</tr>
+											</tfoot>
+										</table>
+									</div>
+									<h2>2023</h2>
+									<div class="table-wrapper">
+										<table>
+											<thead>
+												<tr>
+													<th>Category</th>
+													<th>Title</th>
+													<th>PDF</th>
+													<th>Listen</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Performance</td>
+													<td><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S0164121223002674">Database management system performance comparisons: A systematic literature review</a></td>
+													<td><a href="pdf/2023_performance.pdf" class="fas fa-file-pdf"></a></td>
+													<td><audio style="width:200px;height:32px" controls>
+														  <source src="audio/2023_performance.mp3" type="audio/mp3">Your browser does not support the audio element.
+														  </audio>
+													</td>
+												</tr>
+												<tr>
+													<td>Compilers</td>
+													<td><a target="_blank" href="https://dl.acm.org/doi/full/10.1145/3607180">Framework for SQL Error Message Design: A Data-Driven Approach</a></td>
+													<td><a href="pdf/2023_framework.pdf" class="fas fa-file-pdf"></a></td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>Fundamentals</td>
+													<td><a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3596673.3603142">SQL: A Trojan Horse Hiding a Decathlon of Complexities</a></td>
+													<td><a href="pdf/2023_sql.pdf" class="fas fa-file-pdf"></a></td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>Compilers</td>
+													<td><a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3544549.3585794">Query Execution Plans and Semantic Errors: Usability and Educational Opportunities</a></td>
+													<td><a href="pdf/2023_semantic.pdf" class="fas fa-file-pdf"></a></td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>Education</td>
+													<td><a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3587102.3588804">Engaging Databases for Data Systems Education</a></td>
+													<td><a href="pdf/2023_engaging.pdf" class="fas fa-file-pdf"></a></td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>Education</td>
+													<td><a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3545945.3569727">Students' Perceptions on Engaging Database Domains and Structures</a></td>
+													<td><a href="pdf/2023_perceptions.pdf" class="fas fa-file-pdf"></a></td>
+													<td></td>
+												</tr>
+												<tr>
+													<td>Compilers</td>
+													<td><a target="_blank" href="https://www.tandfonline.com/doi/full/10.1080/10447318.2022.2108648">NewSQL Database Management System Compiler Errors: Effectiveness and Usefulness</a></td>
+													<td><a href="pdf/2023_newsql.pdf" class="fas fa-file-pdf"></a></td>
+													<td></td>
 												</tr>
 											</tfoot>
 										</table>
