--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a target="_blank" href="https://revistacomsoc.pt/index.php/revistacomsoc/article/view/5684/6738" class="image"><img src="images/pic07.jpg" alt="" /></a>
+											<h3>Publication: transparent ownership chains</h3>
+											<p>A new publication shows how to make media ownership chains transparent by utilizing recursive queries.</p>
+										</article>
+										<article>
 											<a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3703922.3703932" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<h3>Publication: workshop report</h3>
 											<p>A new publication summarizes the data systems education studies presented at <i>SIGMOD DataEd'23</i> workshop in Seattle.</p>
@@ -103,9 +108,6 @@
 											<a href="people.html" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3>People: new researcher</h3>
 											<p>Senior researcher Dr. Marko Junkkari joins the DBS research group!</p>
-											<!--<ul class="actions">
-												<li><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="button">Read more</a></li>
-											</ul> -->
 										</article>
 										<article>
 											<a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3649217.3653552" class="image"><img src="images/pic04.jpg" alt="" /></a>
