--- a/publications.html
+++ b/publications.html
@@ -41,6 +41,12 @@ https://fontawesome.com/v5/search?o=r&s=solid
 											</thead>
 											<tbody>
 												<tr>
+													<td>Applications</td>
+													<td><a target="_blank" href="https://revistacomsoc.pt/index.php/revistacomsoc/article/view/5684">Making News Media Ownership Chains Transparent by Relational Databases</a></td>
+													<td><a href="pdf/2024_ownership.pdf" class="fas fa-file-pdf"></a></td>
+													<td></td>
+												</tr>
+												<tr>
 													<td>Education</td>
 													<td><a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3703922.3703932">Report on the Second International Workshop on Data Systems Education (DataEd'23)</a></td>
 													<td><a href="pdf/2024_dataed.pdf" class="fas fa-file-pdf"></a></td>
