--- a/publications.html
+++ b/publications.html
@@ -170,9 +170,9 @@ https://fontawesome.com/v5/search?o=r&s=solid
 									</header>
 									<ul>
 										<li><a href="index.html">Homepage</a></li>
-										<li><a href="#">Projects</a></li>
+										<li><a href="projects.html">Projects</a></li>
 										<li><a href="people.html">People</a></li>
-										<li><a href="publications.html">Publications</a></li>
+										<li><a href="#">Publications</a></li>
 										<li></li>
 									</ul>
 								</nav>
