--- a/projects.html
+++ b/projects.html
@@ -56,13 +56,13 @@ https://fontawesome.com/v5/search?o=r&s=solid
 										<h1>Current projects</h1>
 									</header>
 									<div class="features">
-										<article>
+										<!--<article>
 											<span class="icon solid fa-university"></span>
 											<div class="content">
 												<h3>TROXARTES</h3>
 												<p>The project examines data systems industry needs for future professionals. Funded by City of Tampere.</p>
 											</div>
-										</article>
+										</article> -->
 									<!-- <article>
 											<span class="icon solid fa-car"></span>
 											<div class="content">
