--- a/projects.html
+++ b/projects.html
@@ -188,9 +188,11 @@ https://fontawesome.com/v5/search?o=r&s=solid
 									<p></p>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="mailto:dbs-research@proton.me">dbs-research@proton.me</a></li>
-										<!--<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>-->
+										<!--<li class="icon solid fa-phone">(000) 000-0000</li>-->
+										<li class="icon solid fa-home">Tampere University<br />
+										Tietotalo, Hervanta campus<br />
+										Korkeakoulunkatu 7<br />
+										33720 Tampere, Finland</li>
 									</ul>
 								</section>
 
