--- a/people.html
+++ b/people.html
@@ -23,37 +23,10 @@ https://fontawesome.com/v5/search?o=r&s=solid
 					<div id="main">
 						<div class="inner">
 
-							<!-- Header
-								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
-									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-snapchat-ghost"><span class="label">Snapchat</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-									</ul>
-								</header>
-							-->
-
-							<!-- Banner
-								<<section id="banner">
-									<div class="content">
-										<header>
-											<h1>Database Systems Research</h1>
-											<p></p>
-										</header>
-										<p>We are a multi-disciplinary research group based at Tampere University, Finland. We conduct high quality data systems research on topics such as energy efficient data management, incorporating AI into data pipelines, vector databases, multi-modal data, query languages, DBMS compilers, and data systems education.</p>
-									</div>
-									<span class="image object">
-										<img src="images/logo.png" alt="" />
-									</span>
-								</section>
--->
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h1>Current members</h1>
+										<h1>Members</h1>
 									</header>
 									<div class="features">
 										<article>
@@ -74,44 +47,54 @@ https://fontawesome.com/v5/search?o=r&s=solid
 									</div>
 								</section>
 
-							<!--
-							<section>
-								<header class="major">
-									<h1>Current projects</h1>
-								</header>
-								<div class="features">
-									<article>
-										<span class="icon solid fa-signal"></span>
-										<div class="content">
-											<h3>Efficiency through smart design</h3>
-											<p>From data-intensive transaction processing to data management solutions for AI, we design scalable, green, energy efficient, and smart data systems solutions.</p>
-										</div>
-									</article>
-									<article>
-										<span class="icon fa-gem"></span>
-										<div class="content">
-											<h3>Innovation in novel contexts</h3>
-											<p>We constantly apply novel data system inventions into old and new business domains and use-cases.</p>
-										</div>
-									</article>
-									<article>
-										<span class="icon solid fa-rocket"></span>
-										<div class="content">
-											<h3>Research-as-a-Service</h3>
-											<p>We conduct scientifically rigorous user studies, lab tests, performance testing, and literature syntheses on demand.</p>
-										</div>
-									</article>
-									<article>
-										<span class="icon solid fa-paper-plane"></span>
-										<div class="content">
-											<h3>Training and propagation</h3>
-											<p>We provide on-demand training in data systems topics such as DBMSs, querying, optimization, and reliability, as well as accessible propagation of recent advances in data systems.</p>
-										</div>
-									</article>
-								</div>
-							</section>
-						-->
+<!-- COLLABORATORS:
+								<section>
+									<header class="major">
+										<h1>Members</h1>
+									</header>
+									<div class="features">
+										<article>
+											<span class="icon solid fa-user-circle"></span>
+											<div class="content">
+												<h3><a target="_blank" href="https://dblp.org/pid/71/5124.html">Marko Junkkari</a></h3>
+												<p>PhD. Current research focuses on databases and their practical applications in various domains.</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-user-circle"></span>
+											<div class="content">
+												<h3><a target="_blank" href="https://dblp.org/pid/226/6716.html">Toni Taipalus</a></h3>
+												<p>PhD, research group leader. Current research focuses on energy efficient data management, vector databases, and query languages.</p>
+											</div>
+										</article>
 
+									</div>
+								</section>
+-->
+<!-- ALUMNI:
+								<section>
+									<header class="major">
+										<h1>Members</h1>
+									</header>
+									<div class="features">
+										<article>
+											<span class="icon solid fa-user-circle"></span>
+											<div class="content">
+												<h3><a target="_blank" href="https://dblp.org/pid/71/5124.html">Marko Junkkari</a></h3>
+												<p>PhD. Current research focuses on databases and their practical applications in various domains.</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-user-circle"></span>
+											<div class="content">
+												<h3><a target="_blank" href="https://dblp.org/pid/226/6716.html">Toni Taipalus</a></h3>
+												<p>PhD, research group leader. Current research focuses on energy efficient data management, vector databases, and query languages.</p>
+											</div>
+										</article>
+
+									</div>
+								</section>
+-->
 						</div>
 					</div>
 
