--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@ https://fontawesome.com/v5/search?o=r&s=solid
 											<span class="icon solid fa-university"></span>
 											<div class="content">
 												<h3>Troxartes</h3>
-												<p>The project examines data industry needs for future professionals. Funded by City of Tampere.</p>
+												<p>The project examines data industry needs for future professionals.</p>
 											</div>
 										</article>
 										<article>
