--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 										<article>
 											<a target="_blank" href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
 											<h3>New project: Troxartes</h3>
-											<p>A new project on data education receives external funding.</p>
+											<p>A new DBS research project on data education receives external funding!</p>
 										</article>
 										<article>
 											<a target="_blank" href="https://revistacomsoc.pt/index.php/revistacomsoc/article/view/5684/6738" class="image"><img src="images/pic07.jpg" alt="" /></a>
@@ -107,7 +107,7 @@
 										<article>
 											<a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3703922.3703932" class="image"><img src="images/pic06.jpg" alt="" /></a>
 											<h3>Publication: workshop report</h3>
-											<p>A new publication summarizes the data systems education studies presented at <i>SIGMOD DataEd'23</i> workshop in Seattle.</p>
+											<p>A new publication summarizes the data systems education studies presented at <i>SIGMOD DataEd'23</i> workshop in Seattle, WA.</p>
 										</article>
 										<article>
 											<a href="people.html" class="image"><img src="images/pic05.jpg" alt="" /></a>
