--- a/index.html
+++ b/index.html
@@ -95,6 +95,11 @@
 									</header>
 									<div class="posts">
 										<article>
+											<a href="people.html" class="image"><img src="images/pic09.jpg" alt="" /></a>
+											<h3>People: new researcher</h3>
+											<p>Doctoral researcher Bingxiang Chen joins the DBS research group!</p>
+										</article>
+										<article>
 											<a target="_blank" href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
 											<h3>New project: Troxartes</h3>
 											<p>A new DBS research project on data education receives external funding!</p>
