--- a/people.html
+++ b/people.html
@@ -32,6 +32,13 @@ https://fontawesome.com/v5/search?o=r&s=solid
 										<article>
 											<span class="icon solid fa-user-circle"></span>
 											<div class="content">
+												<h3>Bingxiang Chen</h3>
+												<p>Current research focuses on the intersection of databases, AI, and retrieval-augmented generation.</p>
+											</div>
+										</article>
+										<article>
+											<span class="icon solid fa-user-circle"></span>
+											<div class="content">
 												<h3><a target="_blank" href="https://dblp.org/pid/71/5124.html">Marko Junkkari</a></h3>
 												<p>PhD. Current research focuses on databases and their practical applications in various domains.</p>
 											</div>
