--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@
 											</ul> -->
 										</article>
 										<article>
+											<a target="_blank" href="#" class="image"><img src="images/pic10.jpg" alt="" /></a>
+											<h3>Training: Linux</h3>
+											<p>DBS Research organizes an intensive course on Linux operating system.</p>
+											<!--<ul class="actions">
+												<li><a target="_blank" href="https://www.sciencedirect.com/science/article/pii/S1389041724000093" class="button">Read more</a></li>
+											</ul> -->
+										</article>
+										<article>
 											<a target="_blank" href="https://dl.acm.org/doi/abs/10.1145/3649405.3659529" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<h3>Working group: data systems education</h3>
 											<p>DBS research leads a working group on data systems education curriculum development at the <i>ITiCSE'24</i> conference.</p>
