--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 										<article>
 											<a href="projects.html" class="image"><img src="images/pic_limnisius.jpg" alt="" /></a>
 											<h3>New project: Limnisius</h3>
-											<p>A new project on sustainable data systems receives external funding!</p>
+											<p>A new DBS research project on sustainable data systems receives external funding!</p>
 										</article>
 										<article>
 											<a href="publications.html" class="image"><img src="images/pic_v2.jpg" alt="" /></a>
